Fixed problems with overflow of example content

--- a/Resources/Public/Backend/Css/Skin/t3skin_override.css
+++ b/Resources/Public/Backend/Css/Skin/t3skin_override.css
@@ -398,5 +398,8 @@ td.t3-page-column, td.t3-page-lang-column {
 	white-space: normal;
 	display: inline-block;
 	vertical-align: top;
-	max-width: 250px;
+}
+
+.t3-gridCell-horizontal > .t3-page-ce-wrapper > .t3-page-ce .t3-page-ce-body-inner {
+	white-space: normal;
 }
